# idiosyncratic-industry-momentum

./: .gitignore  1_get_alphas.ipynb  2_backtest.py  3_visualize.py  README.md  pyproject.toml
results/: gamma50_monthly.txt  results.txt
