[project]
name = "momentum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cupy-cuda12x>=13.6.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.2",
    "pyarrow>=23.0.0",
    "sf-backtester>=0.1.1",
]
